Remove the trailing whitespace in CSSMediaRule::cssText

After remove this whitespace, case LayoutTests/css3/condition-cssom.html can
pass in both Firefox and Chrome.

BUG=656835

Review-Url: https://chromiumcodereview.appspot.com/2428223002
Cr-Commit-Position: refs/heads/master@{#426226}

Former-commit-id: be9a3bd6a648138d1a075bd870ed9e10baa6f478